--- a/CasualGames/app/src/main/res/values/strings.xml
+++ b/CasualGames/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
-    <string name="app_name">EmptyActivity</string>
+    <string name="app_name">Casual Games</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_games">Games</string>
+    <string name="nav_settings">Settings</string>
+
+    <string name="home_title">Welcome</string>
+    <string name="home_message">Choose a tab from the bottom navigation.</string>
+
+    <string name="games_hub_title">Games</string>
+    <string name="games_hub_message">Choose a game page.</string>
+    <string name="play_sudoku">Play Sudoku</string>
+
+    <string name="games_available_count">Available games: %1$d</string>
+    <string name="games_description">You can expand this list from a repository later.</string>
+
+    <string name="settings_username">PlayerOne</string>
+    <string name="settings_status">Ready to play</string>
+    <string name="settings_level">Level %1$d</string>
+
+    <string name="sudoku_title">Sudoku</string>
+    <string name="new_game">New Game</string>
+    <string name="erase">Erase</string>
+    <string name="restart_game">Restart Game</string>
+    <string name="back_to_games">Back to Games</string>
+    <string name="sudoku_solved">Sudoku solved!</string>
 </resources>
