--- a/CasualGames/app/src/main/res/values/strings.xml
+++ b/CasualGames/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="games_hub_message">Choose a game page.</string>
     <string name="play_sudoku">Play Sudoku</string>
     <string name="play_mini_sudoku">Play Mini Sudoku</string>
+    <string name="play_queens">Play Queens</string>
+    <string name="play_linkedin_queens">Play Queens</string>
 
     <string name="games_available_count">Available games: %1$d</string>
     <string name="games_description">You can expand this list from a repository later.</string>
@@ -28,6 +30,16 @@
     <string name="mini_sudoku_difficulty_easy">Easy</string>
     <string name="mini_sudoku_difficulty_hard">Hard</string>
     <string name="mini_sudoku_solved">Mini Sudoku solved!</string>
+    <string name="queens_title">Queens</string>
+    <string name="linkedin_queens_title">Queens</string>
+    <string name="queens_difficulty_easy">Easy</string>
+    <string name="queens_difficulty_hard">Hard</string>
+    <string name="queens_solved">Queens puzzle solved!</string>
+    <string name="linkedin_queens_solved">Queens puzzle solved!</string>
+    <string name="linkedin_queens_difficulty_easy">Easy</string>
+    <string name="linkedin_queens_difficulty_hard">Hard</string>
+    <string name="hints_on">Hints On</string>
+    <string name="hints_off">Hints Off</string>
     <string name="new_game">New Game</string>
     <string name="undo_move">Undo</string>
     <string name="help">Help</string>
